# radar

./: .gitignore
apps/mobile/: .env.example  .gitignore  README.md  analysis_options.yaml  pubspec.yaml
apps/mobile/android/app/: build.gradle.kts
apps/mobile/ios/Runner/: Info.plist
apps/mobile/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile/lib/: main.dart
apps/mobile/linux/: CMakeLists.txt
apps/mobile/linux/runner/: my_application.cc
apps/mobile/test/: widget_test.dart
apps/web/: next.config.ts  package.json
apps/web/src/: proxy.ts
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/dashboard/: actions.ts  layout.tsx  loading.tsx  page.tsx
apps/web/src/app/login/: actions.ts  page.tsx
apps/web/src/components/: app-sidebar.tsx  password-input.tsx  submit-button.tsx
apps/web/src/components/ui/: card.tsx  sidebar.tsx  skeleton.tsx
apps/web/src/lib/supabase/: dashboard.ts  format.ts  (+2 more)
backend/api/: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/api/app/core/: database.py  security.py  settings.py
backend/api/app/routers/: ai.py  jobs.py
backend/api/app/schemas/: requests.py  responses.py
backend/api/app/services/matching/: __init__.py  repository.py  runner.py  scoring.py  vision.py
backend/api/app/services/report_drafts/: __init__.py  errors.py  generator.py  openai_json.py  prompts.py  validation.py
supabase/: config.toml  seed.sql
supabase/migrations/: 202605270001_initial_backend.sql  202606100001_admin_panel_completion.sql  202606240001_matching_jobs.sql  202606240002_system_settings_safety.sql
(+64 files in other folders)
